# e-ks

./: .gitignore  Cargo.toml  README.md  askama.toml  biome.json  build.rs  codecov.yml  deny.toml  djlint.toml  package-lock.json  sbom.json  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md  release.yml
.sqlx/: query-00474ecb63229a35e563ccac9cbb1ffe09790ff809d6ca5652790ac03efe016d.json  query-00e1900b475b8e48e5d6680b6eaadff94a8169c10a28900a6ac1082e23b90acc.json  query-07e63b42a61f4653b4dc660a47dba2c0c692458734a722e7ec646dfa86d45735.json  query-097e341b939e5e1ef503bf0b5d857757a33c39e1919fb3c845501aad2803cf6d.json  query-0c27094e560862968853c976185e0b91f1f5a241197c024d5d448959f0225dd7.json  query-0dee0fe5e8cdf21144d1c7eace59ff92edf9c22b52b342f4022b0d3f1ddde2bf.json  query-12c16d8b67a5ff8622b606afd289b2e61eb25183545283d1d1b7e3b8dddb1951.json  query-1317a1c76f647c272f06edeb8544626bc01c9968945bcc526ba90495749fd52a.json  query-1f88ead6cd43368bb46048226dcef52dbc98dc8fd771f180c2037c5fda89b77c.json  query-239734d160e46ceadaa977dbb1f7ac596f0e3bc2c28cfe400936cab152164965.json  query-29350833efee4fe8e160dc70d3961514d4909b86bbdcb80d5ea6d1333d38b186.json  query-2d4ab87ed60405c04da58414536acd8cc516429fe3dcb1f63fcebd7fca1f3fde.json  query-2d6be80b3d9458dbd703f4b9e7e9dcf6b0f23c3a426cc6d8470b57d137ddb32b.json  query-31f734e13b2cdf46983b9665517d34a5f0c67672332d1ede625bb274c5b36bbf.json  query-35386ec5b6692e1ac8b2ae01d7ee22323c84295deae93fb1e6f0d91c33c03d83.json  query-3569f69c136ed7becd02be88d881b281077c023fb3281183895dc4e521fb0280.json  query-37d6581f499a2f1b4fc896273e6a40a0a8a01be468864da3646b9d901b583682.json  query-3a681ef5389073f48bf9e73da57e7e9e068f74f06d12bac9f53352f723aa3eed.json  query-3a9ae661e0c712ab5e9d6e70cc1c02e895c9d293328560c8f1a67f9f3083f358.json  query-40e140525d08931c1f49f47557cc535d7065e830f00395bb2c9939ca1a8e7d98.json  query-427ca1126f48d7fc2c414a35d3dc7758902c7e011dd7c0397488aed6af1d5fcb.json  query-54508ae6acee97b77525c3789130c9ae913c26251cee7b1e97ca149071b48f81.json  query-5572a5841f7d897dc08d5c92394f27066293822e2d3df939a73ccc59b5fe6f54.json  query-5893c70de2e93b3aa569da0d9d523ce884d36ec9e2438b519ab7c9bcf7312e58.json  query-5a97ce47f61df58e9f2bb05718f5de4418475ab49497e3801b30271a60092bd2.json  query-5ae0fe84b624cffbefa084d9fa8d4feab0646b510c35d8360cfb2c6ff3b3c036.json  query-61a5e305759519877494c6534d65d8ec70a363d4f56dd9761b5fbfe2b3738b0c.json  query-62dc5679fe48945f8ed2d7c93b0eb4057464d600d5e40c8983dd2181a09a76c6.json  query-630ce4cfe456d7ebd07ca4586326330b312b26bf89814ba0e679df79ba3c3732.json  query-6629f4c962e9a4885539838e11578dc41043f222756d7f4f127a76bba106880a.json  query-6a800da3d61029adac3c8e0cd39f57913b5dc37acbf0b2d5a7c95a748a829173.json  query-6e06b0b7e2f57c698d98aa21de82658391952954739c94d6334947d05efdb475.json  query-6ff3bbad7eedd4bb2b087c700d6905ee87794edde6152c95472c23156da01700.json  query-7471987214e485d0db1af40339a7fc040042d9eb29ed923017e010601b4590e5.json  query-78e888bff9a63aff9415890ca25413b8c46a8a6eb45d2115b39babf1f08677ae.json  query-8215c00a9d51820b82a2ed7dd657e7985d4d0e1cab58b219fa26118b9614199c.json  query-85291c8460abccfc66a0715a56602c396a4a7560f70682597cd5252110c19a67.json  query-8e9dabc93633432bb65cec7168e7c43e4cfb9d773d63eb5b59d2d86e7409f525.json  query-8eb06e8159d31b99a93d971760e864950d3926257d5dddbc4e622e000f270c3e.json  query-91315d88d13d9fd552951c6a73cb7db9754f74520a8ad64bc007a060fe9bbbd5.json  (+43 more)
deploy/: ci.Dockerfile  db.Dockerfile  eks.Dockerfile  typst.Dockerfile
development/: Cargo.toml  development.yml  djlint.Dockerfile  setup.yml
docs/: ai-policy.md  definition-of-doing.md  definition-of-done.md  roadmap.md  testplan.md  woordenlijst_nl-en.md
frontend/: index.ts
locales/: en.yml  nl.yml
migrations/: 20251016172057_persons.sql  20251206123923_canidate_lists.sql  20260120093114_political_groups.sql  20260129161737_candidate_lists.sql  20260203131345_substitute_submitters.sql  20260204192106_events.sql
models/: README.md  input.json  layout.typ  model-h-1-fry.typ  model-h-1-nl.typ  model-h-1.typ  model-h1-fry.typ  model-h1-nl.typ  model-h1.typ  (+5 more)
offline/: Cargo.toml  README.md  tauri.conf.json
offline/src/: lib.rs  main.rs
offline/src-tauri/: Cargo.toml  tauri.conf.json
offline/src-tauri/capabilities/: default.json
offline/src-tauri/src/: lib.rs  main.rs
(+808 files in other folders)
