[package]
name = "eks"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
rust-version = "1.91"
default-run = "eks"
publish = false
readme = "README.md"
description = "Elektronisch kandidaatstellingssysteem"
documentation = "https://kiesraad.github.io/e-KS/e_ks/"
repository = "https://github.com/kiesraad/e-KS"

[features]
default = ["fixtures", "livereload", "dev-features", "http-logging"]
memory-serve = ["dep:memory-serve"]
fixtures = []
livereload = []
dev-features = []
http-logging = ["dep:tower-http"]

[[bin]]
name = "fixtures"
required-features = ["fixtures", "dev-features"]
test = false

[dependencies]
# tokio universe
axum = { version = "0.8.6", features = ["multipart", "macros"] }
axum-extra = { version = "0.12.1", features = ["routing", "typed-routing", "form", "cookie", "typed-header"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tower-http = { version = "0.6.8", features = ["trace"], optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# blessed.rs / dtolnay
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7"
postcard = { version = "1.1.1", features = ["use-std"] }
secrecy = "0.10.3"
aes-gcm = "0.10.3"
sha2 = "0.10.9"

# blessed.rs
chrono = { version = "0.4.43", features = ["alloc", "std", "serde"] }
parking_lot = "0.12.5"
rand = "0.10.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-none"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "v5"] }

# well maintained + many downloads
askama = "0.15.4" # 31M downloads (Dirkjan Ochtman)
csv = "1.4.0" # 136M downloads (Andrew Gallant)
phf = { version = "0.13.1", default-features = false } # 247M downloads (Steven Fackler)
derive_more = { version = "2.1.1", features = ["display", "from_str", "as_ref", "deref", "into", "from"] } # 251M downloads (Jelte Fennema-Nio)

# tweedegolf
memory-serve = { version = "2.0.0-beta.0", optional = true }
validate = { path = "validate" }

[build-dependencies]
memory-serve = { version = "2.0.0-beta.0", optional = true }
phf_codegen = "0.13.1"

[dev-dependencies]
regex = "1.12.2"
http-body-util = "0.1"
tower = "0.5"

[lints.rust]
unsafe_code = "forbid"

# https://askama.readthedocs.io/en/stable/performance.html#slow-debug-recompilations
[profile.dev.package.askama_derive]
opt-level = 3
